pazcal-semantics/Parser.output
   0  $accept : %entry% $end

   1  pmodule : initialization declaration_list T_eof

   2  initialization :

   3  declaration_list :
   4                   | declaration declaration_list

   5  declaration : const_def
   6              | var_def
   7              | routine
   8              | program

   9  const_inner_def : T_name T_eq const_expr

  10  const_def : T_const ptype const_inner_def const_def_list T_semicolon

  11  const_def_list :
  12                 | T_comma const_inner_def const_def_list

  13  var_def : ptype var_init var_def_list T_semicolon

  14  var_def_list :
  15               | T_comma var_init var_def_list

  16  var_init : T_name
  17           | T_name T_eq expr
  18           | T_name var_init_bra_list

  19  var_init_bra_list : T_lbracket const_expr T_rbracket
  20                    | T_lbracket const_expr T_rbracket var_init_bra_list

  21  routine_header : routine_header_beg T_lparen routine_header_body T_rparen

  22  routine_header_body :
  23                      | ptype formal routine_header_list

  24  routine_header_list :
  25                      | T_comma ptype formal routine_header_list

  26  routine_header_beg : T_PROC T_name
  27                     | T_FUNC ptype T_name

  28  formal : T_name
  29         | T_ampersand T_name
  30         | T_name T_lbracket const_expr T_rbracket formal_end
  31         | T_name T_lbracket T_rbracket formal_end

  32  formal_end :
  33             | T_lbracket const_expr T_rbracket formal_end

  34  routine : routine_header T_semicolon
  35          | routine_header block

  36  program_header : T_PROGRAM T_name T_lparen T_rparen

  37  program : program_header block

  38  ptype : T_int
  39        | T_bool
  40        | T_char
  41        | T_REAL

  42  const_expr : expr

  43  expr : T_int_const
  44       | T_real_const
  45       | T_const_char
  46       | T_string_const
  47       | T_true
  48       | T_false
  49       | T_lparen expr T_rparen
  50       | l_value
  51       | call
  52       | T_plus expr
  53       | T_minus expr
  54       | T_NOT expr
  55       | T_not expr
  56       | expr T_plus expr
  57       | expr T_minus expr
  58       | expr T_times expr
  59       | expr T_div expr
  60       | expr T_mod expr
  61       | expr T_MOD expr
  62       | expr T_equal expr
  63       | expr T_not_equal expr
  64       | expr T_greater expr
  65       | expr T_less expr
  66       | expr T_less_equal expr
  67       | expr T_greater_equal expr
  68       | expr T_and expr
  69       | expr T_AND expr
  70       | expr T_OR expr
  71       | expr T_or expr

  72  l_value : T_name expr_list

  73  expr_list :
  74            | T_lbracket expr T_rbracket expr_list

  75  call : T_name T_lparen T_rparen
  76       | T_name T_lparen expr expressions T_rparen

  77  expressions :
  78              | T_comma expr expressions

  79  block : T_lbrace inner_block T_rbrace

  80  inner_block :
  81              | local_def inner_block
  82              | stmt inner_block

  83  local_def : const_def
  84            | var_def

  85  stmt : T_semicolon
  86       | l_value assign expr T_semicolon
  87       | l_value T_plus_plus T_semicolon
  88       | l_value T_minus_minus T_semicolon
  89       | call T_semicolon
  90       | T_if T_lparen expr T_rparen stmt T_else stmt
  91       | T_if T_lparen expr T_rparen stmt
  92       | T_while T_lparen expr T_rparen stmt
  93       | T_FOR T_lparen T_name T_comma range T_rparen stmt
  94       | T_do stmt T_while T_lparen expr T_rparen T_semicolon
  95       | T_switch T_lparen expr T_rparen T_lbrace inner_switch T_default T_colon clause T_rbrace
  96       | T_switch T_lparen expr T_rparen T_lbrace inner_switch T_rbrace
  97       | T_break T_semicolon
  98       | T_continue T_semicolon
  99       | T_return T_semicolon
 100       | T_return expr T_semicolon
 101       | block
 102       | write T_lparen T_rparen T_semicolon
 103       | write T_lparen pformat pformat_list T_rparen T_semicolon

 104  assign : T_eq
 105         | T_plus_equal
 106         | T_minus_equal
 107         | T_mod_equal
 108         | T_div_equal
 109         | T_times_equal

 110  range : expr T_TO expr
 111        | expr T_TO expr T_STEP expr
 112        | expr T_DOWNTO expr
 113        | expr T_DOWNTO expr T_STEP expr

 114  stmt_list :
 115            | stmt stmt_list

 116  clause : stmt_list
 117         | stmt_list T_NEXT T_semicolon

 118  inner_switch :
 119               | switch_exp clause inner_switch

 120  switch_exp : T_case const_expr T_colon
 121             | T_case const_expr switch_exp

 122  pformat_list :
 123               | T_comma pformat pformat_list

 124  write : T_WRITE
 125        | T_WRITELN
 126        | T_WRITESP
 127        | T_WRITESPLN

 128  pformat : expr
 129          | T_FORM T_lparen expr T_comma expr T_rparen
 130          | T_FORM T_lparen expr T_comma expr T_comma expr T_rparen

 131  %entry% : '\001' pmodule

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . pmodule  (131)
	initialization : .  (2)

	.  reduce 2

	pmodule  goto 3
	initialization  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' pmodule .  (131)

	.  reduce 131


state 4
	pmodule : initialization . declaration_list T_eof  (1)
	declaration_list : .  (3)

	T_bool  shift 5
	T_char  shift 6
	T_const  shift 7
	T_FUNC  shift 8
	T_int  shift 9
	T_PROC  shift 10
	T_PROGRAM  shift 11
	T_REAL  shift 12
	T_eof  reduce 3

	declaration_list  goto 13
	declaration  goto 14
	const_def  goto 15
	var_def  goto 16
	routine  goto 17
	routine_header  goto 18
	routine_header_beg  goto 19
	program  goto 20
	ptype  goto 21
	program_header  goto 22


state 5
	ptype : T_bool .  (39)

	.  reduce 39


state 6
	ptype : T_char .  (40)

	.  reduce 40


state 7
	const_def : T_const . ptype const_inner_def const_def_list T_semicolon  (10)

	T_bool  shift 5
	T_char  shift 6
	T_int  shift 9
	T_REAL  shift 12
	.  error

	ptype  goto 23


state 8
	routine_header_beg : T_FUNC . ptype T_name  (27)

	T_bool  shift 5
	T_char  shift 6
	T_int  shift 9
	T_REAL  shift 12
	.  error

	ptype  goto 24


state 9
	ptype : T_int .  (38)

	.  reduce 38


state 10
	routine_header_beg : T_PROC . T_name  (26)

	T_name  shift 25
	.  error


state 11
	program_header : T_PROGRAM . T_name T_lparen T_rparen  (36)

	T_name  shift 26
	.  error


state 12
	ptype : T_REAL .  (41)

	.  reduce 41


state 13
	pmodule : initialization declaration_list . T_eof  (1)

	T_eof  shift 27
	.  error


state 14
	declaration_list : declaration . declaration_list  (4)
	declaration_list : .  (3)

	T_bool  shift 5
	T_char  shift 6
	T_const  shift 7
	T_FUNC  shift 8
	T_int  shift 9
	T_PROC  shift 10
	T_PROGRAM  shift 11
	T_REAL  shift 12
	T_eof  reduce 3

	declaration_list  goto 28
	declaration  goto 14
	const_def  goto 15
	var_def  goto 16
	routine  goto 17
	routine_header  goto 18
	routine_header_beg  goto 19
	program  goto 20
	ptype  goto 21
	program_header  goto 22


state 15
	declaration : const_def .  (5)

	.  reduce 5


state 16
	declaration : var_def .  (6)

	.  reduce 6


state 17
	declaration : routine .  (7)

	.  reduce 7


state 18
	routine : routine_header . T_semicolon  (34)
	routine : routine_header . block  (35)

	T_semicolon  shift 29
	T_lbrace  shift 30
	.  error

	block  goto 31


state 19
	routine_header : routine_header_beg . T_lparen routine_header_body T_rparen  (21)

	T_lparen  shift 32
	.  error


state 20
	declaration : program .  (8)

	.  reduce 8


state 21
	var_def : ptype . var_init var_def_list T_semicolon  (13)

	T_name  shift 33
	.  error

	var_init  goto 34


state 22
	program : program_header . block  (37)

	T_lbrace  shift 30
	.  error

	block  goto 35


state 23
	const_def : T_const ptype . const_inner_def const_def_list T_semicolon  (10)

	T_name  shift 36
	.  error

	const_inner_def  goto 37


state 24
	routine_header_beg : T_FUNC ptype . T_name  (27)

	T_name  shift 38
	.  error


state 25
	routine_header_beg : T_PROC T_name .  (26)

	.  reduce 26


state 26
	program_header : T_PROGRAM T_name . T_lparen T_rparen  (36)

	T_lparen  shift 39
	.  error


state 27
	pmodule : initialization declaration_list T_eof .  (1)

	.  reduce 1


state 28
	declaration_list : declaration declaration_list .  (4)

	.  reduce 4


state 29
	routine : routine_header T_semicolon .  (34)

	.  reduce 34


state 30
	block : T_lbrace . inner_block T_rbrace  (79)
	inner_block : .  (80)

	T_bool  shift 5
	T_break  shift 40
	T_char  shift 6
	T_const  shift 7
	T_continue  shift 41
	T_do  shift 42
	T_FOR  shift 43
	T_if  shift 44
	T_int  shift 9
	T_REAL  shift 12
	T_return  shift 45
	T_switch  shift 46
	T_while  shift 47
	T_WRITE  shift 48
	T_WRITELN  shift 49
	T_WRITESP  shift 50
	T_WRITESPLN  shift 51
	T_semicolon  shift 52
	T_lbrace  shift 30
	T_name  shift 53
	T_rbrace  reduce 80

	const_def  goto 54
	var_def  goto 55
	ptype  goto 21
	l_value  goto 56
	call  goto 57
	block  goto 58
	inner_block  goto 59
	local_def  goto 60
	stmt  goto 61
	write  goto 62


state 31
	routine : routine_header block .  (35)

	.  reduce 35


state 32
	routine_header : routine_header_beg T_lparen . routine_header_body T_rparen  (21)
	routine_header_body : .  (22)

	T_bool  shift 5
	T_char  shift 6
	T_int  shift 9
	T_REAL  shift 12
	T_rparen  reduce 22

	routine_header_body  goto 63
	ptype  goto 64


state 33
	var_init : T_name .  (16)
	var_init : T_name . T_eq expr  (17)
	var_init : T_name . var_init_bra_list  (18)

	T_eq  shift 65
	T_lbracket  shift 66
	T_semicolon  reduce 16
	T_comma  reduce 16

	var_init_bra_list  goto 67


state 34
	var_def : ptype var_init . var_def_list T_semicolon  (13)
	var_def_list : .  (14)

	T_comma  shift 68
	T_semicolon  reduce 14

	var_def_list  goto 69


state 35
	program : program_header block .  (37)

	.  reduce 37


state 36
	const_inner_def : T_name . T_eq const_expr  (9)

	T_eq  shift 70
	.  error


state 37
	const_def : T_const ptype const_inner_def . const_def_list T_semicolon  (10)
	const_def_list : .  (11)

	T_comma  shift 71
	T_semicolon  reduce 11

	const_def_list  goto 72


state 38
	routine_header_beg : T_FUNC ptype T_name .  (27)

	.  reduce 27


state 39
	program_header : T_PROGRAM T_name T_lparen . T_rparen  (36)

	T_rparen  shift 73
	.  error


state 40
	stmt : T_break . T_semicolon  (97)

	T_semicolon  shift 74
	.  error


state 41
	stmt : T_continue . T_semicolon  (98)

	T_semicolon  shift 75
	.  error


state 42
	stmt : T_do . stmt T_while T_lparen expr T_rparen T_semicolon  (94)

	T_break  shift 40
	T_continue  shift 41
	T_do  shift 42
	T_FOR  shift 43
	T_if  shift 44
	T_return  shift 45
	T_switch  shift 46
	T_while  shift 47
	T_WRITE  shift 48
	T_WRITELN  shift 49
	T_WRITESP  shift 50
	T_WRITESPLN  shift 51
	T_semicolon  shift 52
	T_lbrace  shift 30
	T_name  shift 53
	.  error

	l_value  goto 56
	call  goto 57
	block  goto 58
	stmt  goto 76
	write  goto 62


state 43
	stmt : T_FOR . T_lparen T_name T_comma range T_rparen stmt  (93)

	T_lparen  shift 77
	.  error


state 44
	stmt : T_if . T_lparen expr T_rparen stmt T_else stmt  (90)
	stmt : T_if . T_lparen expr T_rparen stmt  (91)

	T_lparen  shift 78
	.  error


state 45
	stmt : T_return . T_semicolon  (99)
	stmt : T_return . expr T_semicolon  (100)

	T_false  shift 79
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_semicolon  shift 86
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	expr  goto 91
	l_value  goto 92
	call  goto 93


state 46
	stmt : T_switch . T_lparen expr T_rparen T_lbrace inner_switch T_default T_colon clause T_rbrace  (95)
	stmt : T_switch . T_lparen expr T_rparen T_lbrace inner_switch T_rbrace  (96)

	T_lparen  shift 94
	.  error


state 47
	stmt : T_while . T_lparen expr T_rparen stmt  (92)

	T_lparen  shift 95
	.  error


state 48
	write : T_WRITE .  (124)

	.  reduce 124


state 49
	write : T_WRITELN .  (125)

	.  reduce 125


state 50
	write : T_WRITESP .  (126)

	.  reduce 126


state 51
	write : T_WRITESPLN .  (127)

	.  reduce 127


state 52
	stmt : T_semicolon .  (85)

	.  reduce 85


state 53
	l_value : T_name . expr_list  (72)
	call : T_name . T_lparen T_rparen  (75)
	call : T_name . T_lparen expr expressions T_rparen  (76)
	expr_list : .  (73)

	T_lparen  shift 96
	T_lbracket  shift 97
	T_and  reduce 73
	T_case  reduce 73
	T_DOWNTO  reduce 73
	T_MOD  reduce 73
	T_or  reduce 73
	T_STEP  reduce 73
	T_TO  reduce 73
	T_eq  reduce 73
	T_rparen  reduce 73
	T_plus  reduce 73
	T_minus  reduce 73
	T_times  reduce 73
	T_equal  reduce 73
	T_greater  reduce 73
	T_less  reduce 73
	T_less_equal  reduce 73
	T_greater_equal  reduce 73
	T_not_equal  reduce 73
	T_mod  reduce 73
	T_mod_equal  reduce 73
	T_plus_equal  reduce 73
	T_minus_equal  reduce 73
	T_div_equal  reduce 73
	T_times_equal  reduce 73
	T_minus_minus  reduce 73
	T_plus_plus  reduce 73
	T_OR  reduce 73
	T_AND  reduce 73
	T_div  reduce 73
	T_semicolon  reduce 73
	T_colon  reduce 73
	T_comma  reduce 73
	T_rbracket  reduce 73

	expr_list  goto 98


state 54
	local_def : const_def .  (83)

	.  reduce 83


state 55
	local_def : var_def .  (84)

	.  reduce 84


state 56
	stmt : l_value . assign expr T_semicolon  (86)
	stmt : l_value . T_plus_plus T_semicolon  (87)
	stmt : l_value . T_minus_minus T_semicolon  (88)

	T_eq  shift 99
	T_mod_equal  shift 100
	T_plus_equal  shift 101
	T_minus_equal  shift 102
	T_div_equal  shift 103
	T_times_equal  shift 104
	T_minus_minus  shift 105
	T_plus_plus  shift 106
	.  error

	assign  goto 107


state 57
	stmt : call . T_semicolon  (89)

	T_semicolon  shift 108
	.  error


state 58
	stmt : block .  (101)

	.  reduce 101


state 59
	block : T_lbrace inner_block . T_rbrace  (79)

	T_rbrace  shift 109
	.  error


state 60
	inner_block : local_def . inner_block  (81)
	inner_block : .  (80)

	T_bool  shift 5
	T_break  shift 40
	T_char  shift 6
	T_const  shift 7
	T_continue  shift 41
	T_do  shift 42
	T_FOR  shift 43
	T_if  shift 44
	T_int  shift 9
	T_REAL  shift 12
	T_return  shift 45
	T_switch  shift 46
	T_while  shift 47
	T_WRITE  shift 48
	T_WRITELN  shift 49
	T_WRITESP  shift 50
	T_WRITESPLN  shift 51
	T_semicolon  shift 52
	T_lbrace  shift 30
	T_name  shift 53
	T_rbrace  reduce 80

	const_def  goto 54
	var_def  goto 55
	ptype  goto 21
	l_value  goto 56
	call  goto 57
	block  goto 58
	inner_block  goto 110
	local_def  goto 60
	stmt  goto 61
	write  goto 62


state 61
	inner_block : stmt . inner_block  (82)
	inner_block : .  (80)

	T_bool  shift 5
	T_break  shift 40
	T_char  shift 6
	T_const  shift 7
	T_continue  shift 41
	T_do  shift 42
	T_FOR  shift 43
	T_if  shift 44
	T_int  shift 9
	T_REAL  shift 12
	T_return  shift 45
	T_switch  shift 46
	T_while  shift 47
	T_WRITE  shift 48
	T_WRITELN  shift 49
	T_WRITESP  shift 50
	T_WRITESPLN  shift 51
	T_semicolon  shift 52
	T_lbrace  shift 30
	T_name  shift 53
	T_rbrace  reduce 80

	const_def  goto 54
	var_def  goto 55
	ptype  goto 21
	l_value  goto 56
	call  goto 57
	block  goto 58
	inner_block  goto 111
	local_def  goto 60
	stmt  goto 61
	write  goto 62


state 62
	stmt : write . T_lparen T_rparen T_semicolon  (102)
	stmt : write . T_lparen pformat pformat_list T_rparen T_semicolon  (103)

	T_lparen  shift 112
	.  error


state 63
	routine_header : routine_header_beg T_lparen routine_header_body . T_rparen  (21)

	T_rparen  shift 113
	.  error


state 64
	routine_header_body : ptype . formal routine_header_list  (23)

	T_ampersand  shift 114
	T_name  shift 115
	.  error

	formal  goto 116


state 65
	var_init : T_name T_eq . expr  (17)

	T_false  shift 79
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	expr  goto 117
	l_value  goto 92
	call  goto 93


state 66
	var_init_bra_list : T_lbracket . const_expr T_rbracket  (19)
	var_init_bra_list : T_lbracket . const_expr T_rbracket var_init_bra_list  (20)

	T_false  shift 79
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	const_expr  goto 118
	expr  goto 119
	l_value  goto 92
	call  goto 93


state 67
	var_init : T_name var_init_bra_list .  (18)

	.  reduce 18


state 68
	var_def_list : T_comma . var_init var_def_list  (15)

	T_name  shift 33
	.  error

	var_init  goto 120


state 69
	var_def : ptype var_init var_def_list . T_semicolon  (13)

	T_semicolon  shift 121
	.  error


state 70
	const_inner_def : T_name T_eq . const_expr  (9)

	T_false  shift 79
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	const_expr  goto 122
	expr  goto 119
	l_value  goto 92
	call  goto 93


state 71
	const_def_list : T_comma . const_inner_def const_def_list  (12)

	T_name  shift 36
	.  error

	const_inner_def  goto 123


state 72
	const_def : T_const ptype const_inner_def const_def_list . T_semicolon  (10)

	T_semicolon  shift 124
	.  error


state 73
	program_header : T_PROGRAM T_name T_lparen T_rparen .  (36)

	.  reduce 36


state 74
	stmt : T_break T_semicolon .  (97)

	.  reduce 97


state 75
	stmt : T_continue T_semicolon .  (98)

	.  reduce 98


state 76
	stmt : T_do stmt . T_while T_lparen expr T_rparen T_semicolon  (94)

	T_while  shift 125
	.  error


state 77
	stmt : T_FOR T_lparen . T_name T_comma range T_rparen stmt  (93)

	T_name  shift 126
	.  error


state 78
	stmt : T_if T_lparen . expr T_rparen stmt T_else stmt  (90)
	stmt : T_if T_lparen . expr T_rparen stmt  (91)

	T_false  shift 79
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	expr  goto 127
	l_value  goto 92
	call  goto 93


state 79
	expr : T_false .  (48)

	.  reduce 48


state 80
	expr : T_not . expr  (55)

	T_false  shift 79
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	expr  goto 128
	l_value  goto 92
	call  goto 93


state 81
	expr : T_true .  (47)

	.  reduce 47


state 82
	expr : T_lparen . expr T_rparen  (49)

	T_false  shift 79
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	expr  goto 129
	l_value  goto 92
	call  goto 93


state 83
	expr : T_plus . expr  (52)

	T_false  shift 79
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	expr  goto 130
	l_value  goto 92
	call  goto 93


state 84
	expr : T_minus . expr  (53)

	T_false  shift 79
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	expr  goto 131
	l_value  goto 92
	call  goto 93


state 85
	expr : T_NOT . expr  (54)

	T_false  shift 79
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	expr  goto 132
	l_value  goto 92
	call  goto 93


state 86
	stmt : T_return T_semicolon .  (99)

	.  reduce 99


state 87
	expr : T_real_const .  (44)

	.  reduce 44


state 88
	expr : T_const_char .  (45)

	.  reduce 45


state 89
	expr : T_string_const .  (46)

	.  reduce 46


state 90
	expr : T_int_const .  (43)

	.  reduce 43


state 91
	expr : expr . T_plus expr  (56)
	expr : expr . T_minus expr  (57)
	expr : expr . T_times expr  (58)
	expr : expr . T_div expr  (59)
	expr : expr . T_mod expr  (60)
	expr : expr . T_MOD expr  (61)
	expr : expr . T_equal expr  (62)
	expr : expr . T_not_equal expr  (63)
	expr : expr . T_greater expr  (64)
	expr : expr . T_less expr  (65)
	expr : expr . T_less_equal expr  (66)
	expr : expr . T_greater_equal expr  (67)
	expr : expr . T_and expr  (68)
	expr : expr . T_AND expr  (69)
	expr : expr . T_OR expr  (70)
	expr : expr . T_or expr  (71)
	stmt : T_return expr . T_semicolon  (100)

	T_and  shift 133
	T_MOD  shift 134
	T_or  shift 135
	T_plus  shift 136
	T_minus  shift 137
	T_times  shift 138
	T_equal  shift 139
	T_greater  shift 140
	T_less  shift 141
	T_less_equal  shift 142
	T_greater_equal  shift 143
	T_not_equal  shift 144
	T_mod  shift 145
	T_OR  shift 146
	T_AND  shift 147
	T_div  shift 148
	T_semicolon  shift 149
	.  error


state 92
	expr : l_value .  (50)

	.  reduce 50


state 93
	expr : call .  (51)

	.  reduce 51


state 94
	stmt : T_switch T_lparen . expr T_rparen T_lbrace inner_switch T_default T_colon clause T_rbrace  (95)
	stmt : T_switch T_lparen . expr T_rparen T_lbrace inner_switch T_rbrace  (96)

	T_false  shift 79
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	expr  goto 150
	l_value  goto 92
	call  goto 93


state 95
	stmt : T_while T_lparen . expr T_rparen stmt  (92)

	T_false  shift 79
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	expr  goto 151
	l_value  goto 92
	call  goto 93


state 96
	call : T_name T_lparen . T_rparen  (75)
	call : T_name T_lparen . expr expressions T_rparen  (76)

	T_false  shift 79
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_rparen  shift 152
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	expr  goto 153
	l_value  goto 92
	call  goto 93


state 97
	expr_list : T_lbracket . expr T_rbracket expr_list  (74)

	T_false  shift 79
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	expr  goto 154
	l_value  goto 92
	call  goto 93


state 98
	l_value : T_name expr_list .  (72)

	.  reduce 72


state 99
	assign : T_eq .  (104)

	.  reduce 104


state 100
	assign : T_mod_equal .  (107)

	.  reduce 107


state 101
	assign : T_plus_equal .  (105)

	.  reduce 105


state 102
	assign : T_minus_equal .  (106)

	.  reduce 106


state 103
	assign : T_div_equal .  (108)

	.  reduce 108


state 104
	assign : T_times_equal .  (109)

	.  reduce 109


state 105
	stmt : l_value T_minus_minus . T_semicolon  (88)

	T_semicolon  shift 155
	.  error


state 106
	stmt : l_value T_plus_plus . T_semicolon  (87)

	T_semicolon  shift 156
	.  error


state 107
	stmt : l_value assign . expr T_semicolon  (86)

	T_false  shift 79
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	expr  goto 157
	l_value  goto 92
	call  goto 93


state 108
	stmt : call T_semicolon .  (89)

	.  reduce 89


state 109
	block : T_lbrace inner_block T_rbrace .  (79)

	.  reduce 79


state 110
	inner_block : local_def inner_block .  (81)

	.  reduce 81


state 111
	inner_block : stmt inner_block .  (82)

	.  reduce 82


state 112
	stmt : write T_lparen . T_rparen T_semicolon  (102)
	stmt : write T_lparen . pformat pformat_list T_rparen T_semicolon  (103)

	T_false  shift 79
	T_FORM  shift 158
	T_not  shift 80
	T_true  shift 81
	T_lparen  shift 82
	T_rparen  shift 159
	T_plus  shift 83
	T_minus  shift 84
	T_NOT  shift 85
	T_name  shift 53
	T_real_const  shift 87
	T_const_char  shift 88
	T_string_const  shift 89
	T_int_const  shift 90
	.  error

	expr  goto 160
	l_value  goto 92
	call  goto 93
	pformat  goto 161


state 113
	routine_header : routine_header_beg T_lparen routine_header_body T_rparen .  (21)

	.  reduce 21


state 114
	formal : T_ampersand . T_name  (29)

	T_name  shift 162
	.  error


state 115
	formal : T_name .  (28)
	formal : T_name . T_lbracket const_expr T_rbracket formal_end  (30)
	formal : T_name . T_lbracket T_rbracket formal_end  (31)

	T_lbracket  shift 163
	T_rparen  reduce 28
	T_comma  reduce 28


state 116
	routine_header_body : ptype formal . routine_header_list  (23)
	routine_header_list : .  (24)

	T_comma  shift 164
	T_rparen  reduce 24

	routine_header_list  goto 165


state 117
	var_init : T_name T_eq expr .  (17)
	expr : expr . T_plus expr  (56)
	expr : expr . T_minus expr  (57)
	expr : expr . T_times expr  (58)
	expr : expr . T_div expr  (59)
	expr : expr . T_mod expr  (60)
	expr : expr . T_MOD expr  (61)
	expr : expr . T_equal expr  (62)
	expr : expr . T_not_equal expr  (63)
	expr : expr . T_greater expr  (64)
	expr : expr . T_less expr  (65)
	expr : expr . T_less_equal expr  (66)
	expr : expr . T_greater_equal expr  (67)
	expr : expr . T_and expr  (68)
	expr : expr . T_AND expr  (69)
	expr : expr . T_OR expr  (70)
	expr : expr . T_or expr  (71)

	T_and  shift 133
	T_MOD  shift 134
	T_or  shift 135
	T_plus  shift 136
	T_minus  shift 137
	T_times  shift 138
	T_equal  shift 139
	T_greater  shift 140
	T_less  shift 141
	T_less_equal  shift 142
	T_greater_equal  shift 143
	T_not_equal  shift 144
	T_mod  shift 145
	T_OR  shift 146
	T_AND  shift 147
	T_div  shift 148
	T_semicolon  reduce 17
	T_comma  reduce 17


state 118
	var_init_bra_list : T_lbracket const_expr . T_rbracket  (19)
	var_init_bra_list : T_lbracket const_expr . T_rbracket var_init_bra_list  (20)

	T_rbracket  shift 166
	.  error


state 119
	const_expr : expr .  (42)
	expr : expr . T_plus expr  (56)
	expr : expr . T_minus expr  (57)
	expr : expr . T_times expr  (58)
	expr : expr . T_div expr  (59)
	expr : expr . T_mod expr  (60)
	expr : expr . T_MOD expr  (61)
	expr : expr . T_equal expr  (62)
	expr : expr . T_not_equal expr  (63)
	expr : expr . T_greater expr  (64)
	expr : expr . T_less expr  (65)
	expr : expr . T_less_equal expr  (66)
	expr : expr . T_greater_equal expr  (67)
	expr : expr . T_and expr  (68)
	expr : expr . T_AND expr  (69)
	expr : expr . T_OR expr  (70)
	expr : expr . T_or expr  (71)

	T_and  shift 133
	T_MOD  shift 134
	T_or  shift 135
	T_plus  shift 136
	T_minus  shift 137
	T_times  shift 138
	T_equal  shift 139
	T_greater  shift 140
	T_less  shift 141
	T_less_equal  shift 142
	T_greater_equal  shift 143
	T_not_equal  shift 144
	T_mod  shift 145
	T_OR  shift 146
	T_AND  shift 147
	T_div  shift 148
	T_case  reduce 42
	T_semicolon  reduce 42
	T_colon  reduce 42
	T_comma  reduce 42
	T_rbracket  reduce 42


state 120
	var_def_list : T_comma var_init . var_def_list  (15)
	var_def_list : .  (14)

	T_comma  shift 68
	T_semicolon  reduce 14

	var_def_list  goto 167


state 121
	var_def : ptype var_init var_def_list T_semicolon .  (13)

	.  reduce 13


state 122
	const_inner_def : T_name T_eq const_expr .  (9)

	.  reduce 9


state 123
	const_def_list : T_comma const_inner_def . const_def_list  (12)
	const_def_list : .  (11)

	T_comma  shift 71
	T_semicolon  reduce 11

	const_def_list  goto 168


state 124
	const_def : T_const ptype const_inner_def const_def_list T_semicolon .  (10)

	.  reduce 10

